# pipi-shrimp-agent

./: .gitignore  LICENSE  README.md  debug_intent.mjs  index.html  jest.config.cjs  package-lock.json  package.json  patch_db.js  pnpm-lock.yaml  test.typ  test_intent.mjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1773343899033-f764dba1925fa.mjs
.openclaw/: workspace-state.json
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-surface.json  default.json
src-tauri/icons/: icon.icns
src-tauri/skills/: skills.config.json
src-tauri/skills/autoresearch/: SKILL.md
src-tauri/skills/resume/: SKILL.md
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/browser/: mod.rs  observability.rs
src-tauri/src/browser/actions/: click.rs  common.rs  extract.rs  mod.rs  navigate.rs  press_key.rs  screenshot.rs  scroll.rs  state.rs  test_support.rs  type_text.rs  wait.rs
src-tauri/src/browser/cdp/: client.rs  config.rs  discovery.rs  health.rs  mod.rs  timeout.rs
src-tauri/src/browser/dom/: accessibility.rs  interactive.rs  merge.rs  mod.rs  page_state.rs  snapshot.rs
src-tauri/src/browser/session/: manager.rs  mod.rs  reconnect.rs  snapshot_cache.rs  state.rs
src-tauri/src/claude/: adapter.rs  client.rs  commands.rs  composer.rs  http_client.rs  ipc.rs  message.rs  mod.rs  node_subprocess.rs  provider.rs  stream_parser.rs
src-tauri/src/commands/: agent.rs  browser.rs  chat.rs  code.rs  compact.rs  config.rs  doc.rs  file.rs  mcp.rs  mod.rs  models.rs  path_security.rs  path_security_test.rs  search.rs  session_memory.rs  skill.rs  telegram.rs  terminal.rs  tools.rs  web.rs  workspace.rs
src-tauri/src/mcp/: client.rs  config_store.rs  mod.rs  protocol.rs  types.rs
src-tauri/src/mcp/transport/: http.rs  mod.rs  stdio.rs
src-tauri/src/models/: mod.rs  request.rs  response.rs
src-tauri/src/providers/: adapters.rs  mod.rs  registry.rs
src-tauri/src/tools/: mod.rs  registry.rs  scheduler.rs
src-tauri/src/utils/: error.rs  mod.rs  token.rs  typst.rs
src-tauri/tests/: browser_live_actions.rs  browser_page_state_fixtures.rs
src-tauri/tests/fixtures/: browser-page-state-iframe-retry-cache.json  browser-page-state-iframe-shadow.json  browser-page-state-navigation-refresh.json  browser-page-state-partial-warnings.json
(+330 files in other folders)
