[package]
name = "tauri-ai-agent"
version = "0.1.0"
description = "AI Agent - Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-title", "window-unminimize", "window-set-min-size", "window-set-max-size", "window-set-focus", "window-minimize", "window-set-always-on-top", "window-set-resizable", "window-close", "window-unmaximize", "window-start-dragging", "window-hide", "window-set-size", "window-maximize", "window-set-position", "window-set-fullscreen", "window-show", "window-set-decorations", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
open = "5.0"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
