[package]
name = "tauri-ai-agent"
version = "0.1.0"
description = "AI Agent - Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
open = "5.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
regex = "1.10"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
fontdb = "0.14"
typst = "0.11"
typst-svg = "0.11"
typst-pdf = "0.11"
comemo = "0.4"
glob = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
